# client-cpp

./: CMakeLists.txt  README.md  SessionExample.cpp  compile.sh
Session/: IOTDBSession.cpp  IOTDBSession.h
gen-cpp/: SyncService.cpp  SyncService.h  TSIService.cpp  TSIService.h  rpc_constants.cpp  rpc_constants.h  rpc_types.cpp  rpc_types.h  sync_constants.cpp  sync_constants.h  sync_types.cpp  sync_types.h
